# netcanon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUG_REPORTING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Get-NetworkConfigs.ps1  HUMAN_TESTING.md  LICENSE  README.md  SECURITY.md  Test-NetworkConfigs.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  setup_desktop.py  translator-plans.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  fixture_submission.yml
.github/workflows/: ci.yml  desktop-msi-publish.yml  docker-publish.yml  pypi-publish.yml  zizmor.yml
configs/: Cisco_192-168-11-252_20260412_171550.cfg  Fortigate_192-168-10-1_20260412_171550.cfg
definitions/: README.md
definitions/target_profiles/: arista_dcs_7050cx3_32s.yaml  arista_dcs_7050sx_64.yaml  arista_dcs_7060cx_32s.yaml  arista_dcs_7280cr3_32p4.yaml  aruba_2930f_24g.yaml  aruba_2930f_24g_poep.yaml  aruba_2930f_48g.yaml  aruba_2930f_48g_poep.yaml  aruba_3810m_24g_poep.yaml  aruba_3810m_48g_poep.yaml  aruba_6300m_48g.yaml  cisco_c9300_24p.yaml  cisco_c9300_24u.yaml  cisco_c9300_24ux.yaml  cisco_c9300_48p.yaml  cisco_c9300_48u.yaml  cisco_c9300_48uxm.yaml  cisco_c9500_24y4c.yaml  cisco_c9500_48y4c.yaml  fortigate_100e.yaml  fortigate_40f.yaml  fortigate_60f.yaml  juniper_ex4300_48t.yaml  juniper_ex4600_40f.yaml  juniper_qfx5120_48y.yaml  mikrotik_ccr2004_1g_12s_2xs.yaml  mikrotik_crs310_8g_2s.yaml  opnsense_deciso_a10_82574l.yaml  opnsense_deciso_a10_i210.yaml  opnsense_deciso_a10_i210_sfpplus.yaml  opnsense_deciso_a20_i210_sfpplus.yaml  opnsense_deciso_a20_i225_sfpplus.yaml  opnsense_deciso_a8_i211.yaml  opnsense_deciso_a8_i225.yaml  opnsense_deciso_dec600_igc.yaml  opnsense_generic.yaml  opnsense_hyperv.yaml  opnsense_netgate_sg1100.yaml  opnsense_netgate_sg3100.yaml  opnsense_netgate_sg5100.yaml  (+14 more)
docs/: CAPABILITIES.md  COMPARISON.md  HOW_WE_TEST.md  IDENTITY.md  METHODOLOGY.md  RELEASE_PLAN.md  TROUBLESHOOTING.md  adding-a-canonical-field.md  adding-a-target-profile.md  feature-parity-walkthrough.md  glossary.md
docs/archive/: README.md  analysis results.txt  netconfigreport.txt  triage.txt  vendor-config-research.txt
docs/docs-audit/: README.md
docs/fixture-research-2015/: 00-source-analysis.md  01-cisco_iosxe.md  02-juniper_junos.md  03-arista_eos.md  04-aruba_aoss.md  05-fortigate.md  06-mikrotik_routeros.md  07-opnsense.md  08-cisco_nxos.md  09-cisco_iosxr.md  10-cisco_ios_classic.md  11-aruba_aoscx.md  12-juniper_srx.md  13-vyos.md  14-pfsense.md  15-overlay-priority-synthesis.md  README.md
docs/security-triage/: README.md
docs/templates/: AGENTS.md.template  ARCHITECTURE.md.template  CAPABILITIES.md.template  CHANGELOG.md.template  CLAUDE.md.template  CONTRIBUTING.md.template  README.md  RELEASE_PLAN.md.template  SECURITY.md.template
docs/v0.2.0-planning/: README.md
docs/vendor-references/: README.md
docs/vendors/: README.md  arista_eos.md  aruba_aoss.md  cisco_iosxe.md  fortigate.md  juniper_junos.md  mikrotik_routeros.md  opnsense.md
docs/walkthroughs/: README.md  aruba_to_arista.md  cisco_iosxe_to_junos.md  fortigate_to_mikrotik.md  opnsense_to_junos.md
netcanon/: __init__.py  cli.py  config.py  logging_config.py  main.py
netcanon/api/: __init__.py  _errors.py  deps.py
netcanon/collectors/: README.md  __init__.py  base.py  netmiko_collector.py  paramiko_collector.py  probe.py
netcanon/definitions/: README.md  schema.py
netcanon/migration/: __init__.py  _naming.py  _tier3_detection.py  _user_secrets.py  target_profiles.py
netcanon/models/: __init__.py  backup.py  device.py  device_profile.py  migration.py  validators.py
netcanon/security/: credentials.py  migration.py
netcanon/services/: migration_detect.py  migration_pipeline.py  migration_validate.py
netcanon/storage/: __init__.py  device_profile_store.py  file_store.py  job_registry.py  job_store.py  schedule_store.py
netcanon/templates/: base.html  configs.html  definitions.html  devices.html  diff.html  index.html  jobs.html  migrate.html  sanitize.html  schedules.html
netcanon/tools/: __init__.py  sanitize.py
netcanon_desktop/: README.md  __init__.py  __main__.py  app.py  icons.py  preferences.py  preferences_dialog.py  server.py  settings.py  single_instance.py  tray.py  window.py
netconfig/: __init__.py  config.py  logging_config.py  main.py
netconfig/api/: __init__.py  deps.py
netconfig/collectors/: README.md  __init__.py  base.py  netmiko_collector.py  paramiko_collector.py  probe.py
netconfig/definitions/: README.md  __init__.py  loader.py  schema.py
netconfig/migration/: __init__.py  _naming.py  _tier3_detection.py  _user_secrets.py  target_profiles.py
netconfig/models/: __init__.py  backup.py  device.py  device_profile.py  diff.py  migration.py  schedule.py
netconfig/security/: __init__.py  credentials.py
netconfig/services/: __init__.py  diff.py  migration_detect.py  migration_pipeline.py  migration_validate.py
netconfig/storage/: base.py  device_profile_store.py  file_store.py  job_store.py  schedule_store.py
netconfig/templates/: base.html  configs.html  definitions.html  devices.html  diff.html  index.html  jobs.html  migrate.html  schedules.html
netconfig_desktop/: README.md  __init__.py  __main__.py  app.py  icons.py  preferences.py  preferences_dialog.py  server.py  settings.py  single_instance.py  tray.py  window.py
scripts/: render_aruba_central_template.py
tests/: README.md  conftest.py  testid_reference.md
tests/desktop/: conftest.py  test_app.py  test_backups_arista_desktop.py  test_backups_aruba_desktop.py  test_backups_juniper_desktop.py  test_preferences.py  test_preferences_dialog.py  test_server.py  test_settings.py  test_single_instance.py  test_tray.py  test_window.py
tests/e2e/: conftest.py  helpers.py  test_backup_flow.py  test_backup_form.py  test_config_viewer.py  test_diff.py  (+6 more)
tools/: README.md  demo.py  load_cross_vendor_expectations.py  run_full_mesh.py  run_phase4_reconciliation.py
(+1169 files in other folders)
