[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcanon"
version = "0.1.0"
description = "Multi-vendor network config translator with a verifiable cross-vendor audit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Netcanon contributors"},
]
keywords = [
    "network-automation",
    "network-configuration",
    "cisco",
    "juniper",
    "fortinet",
    "aruba",
    "mikrotik",
    "opnsense",
    "arista",
    "vendor-translation",
    "config-migration",
    "python",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "netmiko>=4.4.0",
    "paramiko>=3.4.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "apscheduler>=3.10.4",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
    "httpx>=0.27.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
]
desktop = [
    "PySide6>=6.7.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
desktop-build = [
    "netcanon[desktop]",
    "cx_Freeze>=7.0.0",
]

[project.scripts]
netcanon = "netcanon.cli:main"

[project.urls]
Homepage = "https://github.com/netcanon/netcanon"
Repository = "https://github.com/netcanon/netcanon"
Issues = "https://github.com/netcanon/netcanon/issues"
Changelog = "https://github.com/netcanon/netcanon/blob/main/CHANGELOG.md"
Documentation = "https://github.com/netcanon/netcanon/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["netcanon*", "netcanon_desktop*"]

[tool.setuptools.package-data]
netcanon = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure-function tests, no I/O",
    "integration: API-level tests using TestClient, no real SSH",
    "e2e: full browser tests via Playwright against a live server",
    "desktop: marks tests as desktop-shell tests (deselect with '-m \"not desktop\"')",
    "slow: tests that take longer than 5 seconds",
    "cross_mesh: cross-codec translation matrix tests (category x source x target). Aggregate runtime under this marker must stay under 30s as the matrix grows; if it creeps, add a CI gate or demote the slow case to a layer-A per-codec unit test.",
]
# -x: stop on first failure; --strict-markers: fail on unknown markers
addopts = "-x --strict-markers -q"

[tool.coverage.run]
source = ["netcanon"]
omit = ["tests/*", "netcanon/templates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
