[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netcanon"
# Version is derived from the git tag via setuptools_scm — see
# [tool.setuptools_scm] below.  Tag `v0.1.0` -> version `0.1.0`;
# tag `v0.1.0-rc5` -> version `0.1.0rc5` (PEP 440 normalized).
# Untagged commits get a dev version (`<version>.dev<N>`).
# This eliminates the manual-bump-per-RC tax and the PyPI filename-
# collision class of bugs (each tag produces a unique wheel
# filename automatically).
dynamic = ["version"]
description = "Multi-vendor network config translator with a verifiable cross-vendor audit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Netcanon contributors"},
]
keywords = [
    "network-automation",
    "network-configuration",
    "cisco",
    "juniper",
    "fortinet",
    "aruba",
    "mikrotik",
    "opnsense",
    "arista",
    "vendor-translation",
    "config-migration",
    "python",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "netmiko>=4.4.0",
    "paramiko>=3.4.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "apscheduler>=3.10.4",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    # XML parsing of operator-uploaded configs (OPNsense config.xml +
    # Cisco IOS-XE NETCONF) must reject entity-bomb / XXE payloads.
    # Stdlib xml.etree.ElementTree expands internal entities by default
    # (verified on Python 3.14.4); defusedxml provides a drop-in
    # `fromstring` that rejects them.  See docs/security-triage/
    # 2026-05-21/01-investigation-A.md alerts #14/#15.
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
    "httpx>=0.27.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
]
desktop = [
    "PySide6>=6.7.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
desktop-build = [
    "netcanon[desktop]",
    "cx_Freeze>=7.0.0",
]

[project.scripts]
netcanon = "netcanon.cli:main"

[project.urls]
Homepage = "https://github.com/netcanon/netcanon"
Repository = "https://github.com/netcanon/netcanon"
Issues = "https://github.com/netcanon/netcanon/issues"
Changelog = "https://github.com/netcanon/netcanon/blob/main/CHANGELOG.md"
Documentation = "https://github.com/netcanon/netcanon/blob/main/README.md"

[tool.setuptools_scm]
# Write the resolved version to a Python file so the running package
# (inside a Docker container, after `pip install`, etc.) can read it
# without needing git available at runtime.  The file is gitignored;
# regenerated on every build.
version_file = "netcanon/_version.py"
# Strip PEP 440 local-version components (`+g<sha>`).  PyPI rejects
# uploads with local versions in the version string; CI builds that
# happen on untagged commits would otherwise produce
# `0.1.0rc5.dev3+g<sha>` which fails the publish.  With
# `no-local-version`, untagged builds become `0.1.0rc5.dev3` (clean
# pre-release form, accepted by PyPI).
local_scheme = "no-local-version"
# Fallback version for source trees with no git history (e.g. extracted
# tarball with no .git directory).  Should never be hit in CI or
# normal worktree work; backstop only.  PEP 440 form.
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["netcanon*", "netcanon_desktop*"]

[tool.setuptools.package-data]
# IMPORTANT: keep this in sync with what's actually under
# `netcanon/templates/`.  The previous glob `templates/*.html` only
# matched HTML files at the top level — Jinja partials under
# `_partials/*.js` were silently excluded from built wheels, which
# 500'd every HTML page on a `pip install netcanon` install (the
# bug that broke v0.1.0-rc1 and rc2).  Editable installs
# (`pip install -e`) hide this because they import from the source
# tree directly; production wheels do not.  See AGENTS.md doc-sync
# rule "templates/ contents change" for the discipline; the CI
# `docker-build-smoke` job in `ci.yml` curls `/` (not just `/health`)
# to catch missing-partial regressions.
netcanon = [
    "templates/*.html",
    "templates/_partials/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure-function tests, no I/O",
    "integration: API-level tests using TestClient, no real SSH",
    "e2e: full browser tests via Playwright against a live server",
    "desktop: marks tests as desktop-shell tests (deselect with '-m \"not desktop\"')",
    "cross_mesh: cross-codec translation matrix tests (category x source x target). Aggregate runtime under this marker must stay under 30s as the matrix grows; if it creeps, add a CI gate or demote the slow case to a layer-A per-codec unit test.",
]
# -x: stop on first failure; --strict-markers: fail on unknown markers
addopts = "-x --strict-markers -q"

[tool.coverage.run]
source = ["netcanon"]
omit = ["tests/*", "netcanon/templates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
